Add view controllers to storyboard

--- a/Alibaba/Base.lproj/Main.storyboard
+++ b/Alibaba/Base.lproj/Main.storyboard
@@ -15,12 +15,116 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="2Kt-59-Zjg"/>
+                        <segue destination="7Gw-gz-jfu" kind="relationship" relationship="rootViewController" id="w0V-g0-Tfh"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ql-G4-sNe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-453.5" y="263.5"/>
+            <point key="canvasLocation" x="-453.5" y="252.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="W7z-jA-T8p">
+            <objects>
+                <viewController id="7Gw-gz-jfu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W6J-kp-lbr"/>
+                        <viewControllerLayoutGuide type="bottom" id="Llq-Yq-R1D"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ldi-Ho-uUL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="OKj-bH-1s1"/>
+                    <connections>
+                        <segue destination="g5X-Kr-tUD" kind="show" id="bVJ-gr-Ag3"/>
+                        <segue destination="FAU-l5-Rau" kind="show" id="WT9-63-aMz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6OS-mW-DUe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118.5" y="252.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Tfb-gU-acH">
+            <objects>
+                <viewController id="g5X-Kr-tUD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Qt-IT-Jhj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Unj-vi-v1e"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="N4e-gh-4Lw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" id="aW2-yO-yoZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iFA-SA-LHz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="726.5" y="252.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Ptn-Yn-5B3">
+            <objects>
+                <viewController id="FAU-l5-Rau" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dB2-ch-f33"/>
+                        <viewControllerLayoutGuide type="bottom" id="xY4-OP-bJu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UA2-Hg-7zH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="qsr-tP-Bcx" kind="show" id="655-K3-6vi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qKN-O8-2I4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118" y="1084"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pRU-IM-2Je">
+            <objects>
+                <viewController id="qsr-tP-Bcx" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PMn-g6-Zka"/>
+                        <viewControllerLayoutGuide type="bottom" id="0xm-R6-xO5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BhV-c8-kS9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="uOb-Dc-Lws" kind="show" id="TN3-gj-na7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HDc-B3-dD1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="726" y="1084"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8yv-qS-cUF">
+            <objects>
+                <viewController id="uOb-Dc-Lws" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zlL-6u-utQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="daK-ty-B9x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Trc-s1-EGx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TsG-dP-fFP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1306.5" y="1083.5"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -62,7 +166,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="79.5" y="263.5"/>
+            <point key="canvasLocation" x="1306.5" y="252.5"/>
         </scene>
     </scenes>
 </document>
