動きをなめらかに

--- a/Alibaba/Base.lproj/Main.storyboard
+++ b/Alibaba/Base.lproj/Main.storyboard
@@ -69,14 +69,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg001" translatesAutoresizingMaskIntoConstraints="NO" id="W71-FT-XqN">
+                                <rect key="frame" x="67" y="219" width="240" height="238"/>
+                            </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eOi-tq-vLl">
-                                <rect key="frame" x="67" y="211" width="240" height="246"/>
+                                <rect key="frame" x="67" y="219" width="240" height="238"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo001" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-vj-WNx">
-                                        <rect key="frame" x="0.0" y="8" width="240" height="238"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo002" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-vj-WNx">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="238"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -194,6 +197,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo001" width="381" height="381"/>
+        <image name="bg001" width="1252" height="1236"/>
+        <image name="logo002" width="762" height="762"/>
     </resources>
 </document>
