--- a/Alibaba/Base.lproj/Main.storyboard
+++ b/Alibaba/Base.lproj/Main.storyboard
@@ -166,28 +166,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6n7-tQ-h0a">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="mx1-bS-ivH">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6n7-tQ-h0a" firstAttribute="top" secondItem="mx1-bS-ivH" secondAttribute="bottom" id="J6J-CP-olF"/>
                             <constraint firstAttribute="trailing" secondItem="6n7-tQ-h0a" secondAttribute="trailing" id="MRu-XS-CGx"/>
-                            <constraint firstAttribute="trailing" secondItem="mx1-bS-ivH" secondAttribute="trailing" id="QyH-Ch-Xvz"/>
-                            <constraint firstItem="mx1-bS-ivH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="WBF-qR-ERX"/>
+                            <constraint firstItem="6n7-tQ-h0a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Vco-Uh-g13"/>
                             <constraint firstItem="6n7-tQ-h0a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="faK-PE-3oS"/>
-                            <constraint firstItem="6n7-tQ-h0a" firstAttribute="top" secondItem="mx1-bS-ivH" secondAttribute="bottom" id="oLg-pf-DfB"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6n7-tQ-h0a" secondAttribute="bottom" id="vYr-Bo-Kby"/>
-                            <constraint firstItem="mx1-bS-ivH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yPh-7t-H80"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PrO-qk-iUL"/>
                     <connections>
-                        <outlet property="destSearchBar" destination="mx1-bS-ivH" id="eBo-gu-8gt"/>
                         <outlet property="mapView" destination="6n7-tQ-h0a" id="J7T-dF-kVR"/>
                     </connections>
                 </viewController>
